# book-platform

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: datamodels.py  main.py  search_db.py  test_main.py  user_interface.py
